fixed safari layout bug

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -11,6 +11,7 @@ body {
   font-size: 15px;
   color: #fff;
   font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
   -webkit-font-smoothing: antialiased;
   overflow: hidden;
 }
