--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -13,6 +13,7 @@ input {
   font-size: 4rem;
   color: #fff;
   font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
   align-self: flex-start;
   text-align: center;
   transition: all .15s cubic-bezier(0.65, 0.05, 0.36, 1);
